--- a/README.rdoc
+++ b/README.rdoc
@@ -1,3 +1,3 @@
 = Dialectic
 
-This project rocks and uses MIT-LICENSE.
+This project is under active development will let you know once it is stable.
